# which-bin-rs

./: Cargo.toml  README.md
src/: main.rs
